add gradient and fix bugs

--- a/pages/Check_out_page/Check_out_page.html
+++ b/pages/Check_out_page/Check_out_page.html
@@ -42,7 +42,9 @@
       </div>
     </div>
 
-    <span class="path">Home/Check Out</span>
+    <div class = path>
+    <span class="path_font">Home/Check Out</span>
+    </div>
     <div class="checkout-content">
 
       <div class="checkout-form">
@@ -59,9 +61,8 @@
           <input type="text" placeholder="First Name" />
           <input type="text" placeholder="Last Name" />
         </div>
-        <div class="input-full with-icon">
+        <div class="input-row">
           <input type="text" placeholder="Address" />
-          <span class="icon-search"></span>
         </div>
         <div class="input-row">
           <input type="text" placeholder="City" />
@@ -78,7 +79,8 @@
           <img src="../../src/logo/payment.png" alt="Credit card form" />
         </div>
 
-        <button class="btn-paynow">Pay Now</button>
+        <button class="btn-paynow" onclick="window.location.href='../Confirmation_of_Purchase/Confirmation_of_Purchase.html'">Pay Now</button>
+
       </div>
 
       <div class="checkout-summary">
