--- a/pages/content_pages/Privacy_Policy.html
+++ b/pages/content_pages/Privacy_Policy.html
@@ -41,26 +41,26 @@
         </div>
       </div>
     </div>
-    <div class="title">“Return & Refund”</div>
+    <div class="title">““Privacy Policy””</div>
     <div class="content">
-      <h2>Thank you for purchasing with LeTAO</h2>
-      <p>We aim to do everything possible to satisfy our customers. If you received a damaged or defective product we
-        will gladly organise an exchange, free of charge or refund by returning the original products. Please request
-        an exchange or refund within 48 hours of receiving your LeTAO product. Include your order number and any
-        supporting information about the defect, including a photo if possible.</p>
-      <p>On receipt of your email, we will review your complaint and contact you about organising a free exchange or
-        refund.</p>
+      <h2>Privacy Policy</h2>
+      <p>This Privacy Policy describes how letaoaustralia.com (the "Site" or "we") collects, uses, and discloses your
+        Personal Information when you visit or make a purchase from the Site.</p>
 
-      <h2>Delivery Errors & Damages</h2>
-      <p>Upon receiving it, kindly inspect your order and contact us immediately if you have received the wrong item
-        or it is damaged in some way. If you receive the wrong item so that we can evaluate the issue and make it
-        right.</p>
+      <h2>Contact</h2>
+      <p>After reviewing this policy, if you have additional questions, want more information about our privacy
+        practices, or would like to make a complaint, please contact us by e-mail at enquiries@LeTAOaustralia.com or by
+        mail using the details provided below:</p>
+      <p>LeTAO Australia, Level 5/447 Collins Street, Melbourne VIC 3000, Australia</p>
 
-      <p>If you have any questions, feel free to get in contact via our Online Chat, call us on 0404 76 1888 or email
-        us at enquiries@LeTAOaustralia.com.</p>
+      <h2>Collecting Personal Information</h2>
+      <p>When you visit the Site, we collect certain information about your device, your interaction with the Site, and
+        information necessary to process your purchases. We may also collect additional information if you contact us
+        for customer support. In this Privacy Policy, we refer to any information about an identifiable individual
+        (including the information below) as "Personal Information"</p>
     </div>
-    
-    <div class="flex-row footer-container">
+
+    <div class="flex-row footer-container footer-gradient">
       <div class="flex-col footer-item">
         <a href="../content_pages/Delivery_Policy_Page.html"><span class="footer-item-text">Delivery Policy</span> </a>
       </div>
