--- a/pages/content_pages/Return_Refund.html
+++ b/pages/content_pages/Return_Refund.html
@@ -65,7 +65,7 @@
     </div>
 
     <!-- Footer -->
-    <div class="flex-row footer-container">
+    <div class="flex-row footer-container footer-gradient">
       <div class="flex-col footer-item">
         <a href="../content_pages/Delivery_Policy_Page.html"><span class="footer-item-text">Delivery Policy</span> </a>
       </div>
