--- a/pages/product_pages/Seasonal_Limits_PAGE.html
+++ b/pages/product_pages/Seasonal_Limits_PAGE.html
@@ -82,11 +82,12 @@
           <div class="product-card">
             <div class="product-image-container">
               <img class="product-image" src="../../src/logo/cheesecake.png" />
-              <div class="product-label"><span class="product-label-text">MEL & BNE Only</span></div>
             </div>
             <div class="product-info">
               <div class="product-details">
-                <span class="product-name">Fromage Double</span>
+                <a href="../product_details/fromage.html">
+                  <span class="product-name">Fromage Double</span>
+                </a>
                 <span class="product-price">$43.99</span>
               </div>
               <img class="product-add-button" src="../../src/logo/plus.png" />
@@ -98,7 +99,6 @@
           <div class="product-card">
             <div class="product-image-container">
               <img class="product-image" src="../../src/logo/POSTMARCH31-YUKIICHIGOCAROUSELSLIDE2.jpg" />
-              <div class="product-label"><span class="product-label-text">MEL & BNE Only</span></div>
             </div>
             <div class="product-info">
               <div class="product-details">
@@ -130,11 +130,12 @@
           <div class="product-card">
             <div class="product-image-container">
               <img class="product-image" src="../../src/logo/red.png" />
-              <div class="product-label"><span class="product-label-text">MEL & BNE Only</span></div>
             </div>
             <div class="product-info">
               <div class="product-details">
-                <span class="product-name">Chocolate Double</span>
+                <a href="../product_details/chocolate.html">
+                  <span class="product-name">Chocolate Double</span>
+                </a>
                 <span class="product-price">$48.99</span>
               </div>
               <img class="product-add-button" src="../../src/logo/plus.png" />
