--- a/pages/Contact_Us_Page/Contact_Us_Page.html
+++ b/pages/Contact_Us_Page/Contact_Us_Page.html
@@ -56,7 +56,7 @@
     </main>
 
     <!-- Footer -->
-    <div class="flex-row footer-container">
+    <div class="flex-row footer-container footer-gradient">
       <div class="flex-col footer-item">
         <a href="../content_pages/Delivery_Policy_Page.html"><span class="footer-item-text">Delivery Policy</span> </a>
       </div>
