--- a/pages/product_pages/All_Product_PAGE.html
+++ b/pages/product_pages/All_Product_PAGE.html
@@ -65,11 +65,10 @@
           <div class="product-card">
             <div class="product-image-container">
               <img class="product-image" src="../../src/logo/cheesecake.png" />
-              <div class="product-label"><span class="product-label-text">MEL & BNE Only</span></div>
             </div>
             <div class="product-info">
               <div class="product-details">
-                <span class="product-name">Fromage Double</span>
+                <a href="../product_details/fromage.html"><span class="product-name">Fromage Double</span> </a>
                 <span class="product-price">$43.99</span>
               </div>
               <img class="product-add-button" src="../../src/logo/plus.png" />
@@ -111,11 +110,10 @@
           <div class="product-card">
             <div class="product-image-container">
               <img class="product-image" src="../../src/logo/red.png" />
-              <div class="product-label"><span class="product-label-text">MEL & BNE Only</span></div>
             </div>
             <div class="product-info">
               <div class="product-details">
-                <span class="product-name">Chocolate Double</span>
+                <a href="../product_details/chocolate.html"> <span class="product-name">Chocolate Double</span> </a>
                 <span class="product-price">$48.99</span>
               </div>
               <img class="product-add-button" src="../../src/logo/plus.png" />
@@ -126,7 +124,6 @@
           <div class="product-card">
             <div class="product-image-container">
               <img class="product-image" src="../../src/logo/POST_16_JUNE_-_MILK_FROMAGE_COOKIES_STATIC.png" />
-              <div class="product-label"><span class="product-label-text">MEL & BNE Only</span></div>
             </div>
             <div class="product-info">
               <div class="product-details">
@@ -141,7 +138,6 @@
           <div class="product-card">
             <div class="product-image-container">
               <img class="product-image" src="../../src/logo/17478286126249792972.png" />
-              <div class="product-label"><span class="product-label-text">MEL & BNE Only</span></div>
             </div>
             <div class="product-info">
               <div class="product-details">
@@ -156,7 +152,6 @@
           <div class="product-card">
             <div class="product-image-container">
               <img class="product-image" src="../../src/logo/POST_16_OCTOBER_-_THE_NOIR_COOKIES_STATIC.png" />
-              <div class="product-label"><span class="product-label-text">MEL & BNE Only</span></div>
             </div>
             <div class="product-info">
               <div class="product-details">
@@ -170,13 +165,13 @@
         <div class="product-item">
           <div class="product-card">
             <div class="product-image-container">
-              <img class="product-image"
-                src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=defa6da873922cb4fa33e5a7e24d4897.png" />
-              <div class="product-label"><span class="product-label-text">MEL & BNE Only</span></div>
+              <img class="product-image" src="../../src/logo/jersey_mild_roll.png" />
             </div>
             <div class="product-info">
               <div class="product-details">
-                <span class="product-name">Jersey Milk Roll</span>
+                <a href="../product_details/milkroll.html">
+                  <span class="product-name">Jersey Milk Roll</span>
+                </a>
                 <span class="product-price">$33.99</span>
               </div>
               <img class="product-add-button" src="../../src/logo/plus.png" />
@@ -184,25 +179,27 @@
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="flex-row footer-container">
-        <div class="flex-col footer-item">
-          <a href="../content_pages/Delivery_Policy_Page.html"><span class="footer-item-text">Delivery Policy</span> </a>
-        </div>
-        <div class="flex-col  footer-item">
-          <a href="../content_pages/Return_Refund.html"> <span class="footer-item-text">Return & Refund</span> </a>
-          <div class="footer-item-divider"></div>
-        </div>
-        <div class="flex-col footer-item">
-          <a href="../content_pages/Privacy_Policy.html"><span class="footer-item-text">Privacy Policy</span> </a>
-          <div class="shrink-0 footer-item-divider"></div>
-        </div>
-        <div class="flex-col  footer-item">
-          <a href="../Contact_Us_Page/Contact_Us_Page.html">
-            <span class="footer-item-text">Contact Us</span> </a>
-        </div>
+    <div class="flex-row footer-container">
+      <div class="flex-col footer-item">
+        <a href="../content_pages/Delivery_Policy_Page.html"><span class="footer-item-text">Delivery Policy</span>
+        </a>
+      </div>
+      <div class="flex-col  footer-item">
+        <a href="../content_pages/Return_Refund.html"> <span class="footer-item-text">Return & Refund</span> </a>
+        <div class="footer-item-divider"></div>
+      </div>
+      <div class="flex-col footer-item">
+        <a href="../content_pages/Privacy_Policy.html"><span class="footer-item-text">Privacy Policy</span> </a>
+        <div class="shrink-0 footer-item-divider"></div>
+      </div>
+      <div class="flex-col  footer-item">
+        <a href="../Contact_Us_Page/Contact_Us_Page.html">
+          <span class="footer-item-text">Contact Us</span> </a>
       </div>
     </div>
+  </div>
   </div>
 </body>
 
