--- a/pages/product_pages/Signature_Creations_PAGE.html
+++ b/pages/product_pages/Signature_Creations_PAGE.html
@@ -79,11 +79,12 @@
             <div class="product-card">
               <div class="product-image-container">
                 <img class="product-image" src="../../src/logo/cheesecake.png" />
-                <div class="product-label"><span class="product-label-text">MEL & BNE Only</span></div>
               </div>
               <div class="product-info">
                 <div class="product-details">
-                  <span class="product-name">Fromage Double</span>
+                  <a href="../product_details/fromage.html">
+                    <span class="product-name">Fromage Double</span>
+                  </a>
                   <span class="product-price">$43.99</span>
                 </div>
                 <img class="product-add-button" src="../../src/logo/plus.png" />
@@ -95,7 +96,6 @@
             <div class="product-card">
               <div class="product-image-container">
                 <img class="product-image" src="../../src/logo/POST_16_JUNE_-_MILK_FROMAGE_COOKIES_STATIC.png" />
-                <div class="product-label"><span class="product-label-text">MEL & BNE Only</span></div>
               </div>
               <div class="product-info">
                 <div class="product-details">
@@ -126,12 +126,13 @@
           <div class="product-item">
             <div class="product-card">
               <div class="product-image-container">
-                <img class="product-image" src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=defa6da873922cb4fa33e5a7e24d4897.png" />
-                <div class="product-label"><span class="product-label-text">MEL & BNE Only</span></div>
+                <img class="product-image" src="../../src/logo/jersey_mild_roll.png" />
               </div>
               <div class="product-info">
                 <div class="product-details">
-                  <span class="product-name">Jersey Milk Roll</span>
+                  <a href="../product_details/milkroll.html">
+                    <span class="product-name">Jersey Milk Roll</span>
+                  </a>
                   <span class="product-price">$33.99</span>
                 </div>
                 <img class="product-add-button" src="../../src/logo/plus.png" />
