add shopping cart logic

--- a/pages/Check_out_page/Check_out_page.html
+++ b/pages/Check_out_page/Check_out_page.html
@@ -48,8 +48,8 @@
     <div class="checkout-content">
 
       <div class="checkout-form">
-        <h2 class="checkout-title">Express Checkout</h2>
-        <button class="btn-shoppay">ShopPAY</button>
+        <h2 class="checkout-title" style="text-align: center;">Express Checkout</h2>
+        <button class="btn-shoppay" style="display: block; margin: 0 auto;">ShopPAY</button>
         <div class="or-separator"><span>or</span></div>
 
         <h3 class="section-title">Contact</h3>
@@ -76,10 +76,10 @@
 
         <h3 class="section-title">Payment</h3>
         <div class="payment-widget">
-          <img src="../../src/logo/payment.png" alt="Credit card form" />
+          <img src="../../src/logo/payment.png" style="display: block; margin: 0 auto" alt="Credit card form" />
         </div>
 
-        <button class="btn-paynow" onclick="window.location.href='../Confirmation_of_Purchase/Confirmation_of_Purchase.html'">Pay Now</button>
+        <button class="btn-paynow" style="display: block; margin: 0 auto"  onclick="window.location.href='../Confirmation_of_Purchase/Confirmation_of_Purchase.html'">Pay Now</button>
 
       </div>
 
