--- a/pages/Confirmation_of_Purchase/Confirmation_of_Purchase.html
+++ b/pages/Confirmation_of_Purchase/Confirmation_of_Purchase.html
@@ -45,7 +45,7 @@
     <div class="main-content">
       <div class="confirmation-message-container">
         <h2 class="confirmation-title">Thank you !</h2>
-        <button class="confirmation-button">VIEW ORDER CONFIRMATION</button>
+        <button class="confirmation-button" onclick="window.location.href='../Homepage/Homepage.html'">VIEW ORDER CONFIRMATION</button>
       </div>
       <img class="confirmation-image"
         src="../../src/imgs/tail.png" />
