--- a/pages/Contact_Us_Page/Contact_Us_Page.html
+++ b/pages/Contact_Us_Page/Contact_Us_Page.html
@@ -41,12 +41,11 @@
     </div>
 
 
-    <!-- Contact Form -->
     <main class="main-content">
       <h2>Contact Us</h2>
       <input class="input-box" type="email" placeholder="Email" />
-      <textarea class="textarea-box" placeholder="What would you like us to know?"></textarea>
-      <button class="submit-button">Send</button>
+      <textarea class="textarea-box" placeholder="What would you like us to know?" font=""></textarea>
+      <button class="submit-button" onclick="window.location.href='../Homepage/Homepage.html'">Send</button>
 
       <p class="social-invite">Follow LeTAO for new arrivals and special offers!</p>
       <div class="social-icons">
@@ -55,7 +54,6 @@
       </div>
     </main>
 
-    <!-- Footer -->
     <div class="flex-row footer-container footer-gradient">
       <div class="flex-col footer-item">
         <a href="../content_pages/Delivery_Policy_Page.html"><span class="footer-item-text">Delivery Policy</span> </a>
