--- a/pages/Homepage/Homepage.html
+++ b/pages/Homepage/Homepage.html
@@ -43,12 +43,12 @@
     </div>
 
     <div class="flex-col main-content">
-      <img class="main_image" src="../../src/imgs/homepage_teaser.png" />
+      <img class="main_image" src="../../src/imgs/homepage_teaser.png" onclick="window.location.href='../product_pages/All_Product_PAGE.html'"/>
     </div>
 
     <div class="flex-row equal-division">
-      <img class="main_image equal-division-item" src="../../src/imgs/softserving.png" />
-      <img class="main_image equal-division-item ml-63-5" src="../../src/imgs/double.png" />
+      <img class="main_image equal-division-item" src="../../src/imgs/softserving.png" onclick="window.location.href='../product_pages/All_Product_PAGE.html'" />
+      <img class="main_image equal-division-item ml-63-5" src="../../src/imgs/double.png" onclick="window.location.href='../product_pages/All_Product_PAGE.html'"/>
     </div>
     <img class="main_image" src="../../src/imgs/tail.png" />
 
