--- a/pages/login/Login_Page.html
+++ b/pages/login/Login_Page.html
@@ -47,7 +47,7 @@
       <h2>Customer Login</h2>
       <input class="input-box" type="email" placeholder="Email" />
       <input class="input-box" type="password" placeholder="Password" />
-      <button class="login-button">Login</button>
+      <button class="login-button" onclick="window.location.href='../Homepage/Homepage.html'">Login</button>
     </div>
     <img class="store-image"
       src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=166416c27cd18c246740241ec3628dbd.png" />
