--- a/pages/product_details/chocolate.html
+++ b/pages/product_details/chocolate.html
@@ -81,7 +81,7 @@
 
         <p class="origin">MADE IN HOKKAIDO, JAPAN WITH LOVE.</p>
 
-        <button class="btn-add">Add to Cart</button>
+        <button class="btn-add" onclick="addChocolateToCart()">Add to Cart</button>
       </div>
     </main>
 
@@ -103,6 +103,28 @@
       </div>
     </div>
   </div>
+
+  <script>
+    function addChocolateToCart() {
+      let cart = JSON.parse(localStorage.getItem('letaoCart')) || { items: [], total: 0 };
+
+      const existingItemIndex = cart.items.findIndex(item => item.name === "Chocolate Double");
+
+      if (existingItemIndex >= 0) {
+        cart.items[existingItemIndex].quantity += 1;
+      } else {
+        cart.items.push({
+          id: Date.now(), 
+          name: "Chocolate Double",
+          price: 43.99,
+          quantity: 1,
+          image: "../../src/logo/chocolate.png"
+        });
+      }
+
+      localStorage.setItem('letaoCart', JSON.stringify(cart));
+    }
+  </script>
 </body>
 
 </html>
