--- a/pages/content_pages/Privacy_Policy.html
+++ b/pages/content_pages/Privacy_Policy.html
@@ -41,7 +41,7 @@
         </div>
       </div>
     </div>
-    <div class="title">““Privacy Policy””</div>
+    <div class="title">“Privacy Policy”</div>
     <div class="content">
       <h2>Privacy Policy</h2>
       <p>This Privacy Policy describes how letaoaustralia.com (the "Site" or "we") collects, uses, and discloses your
