--- a/pages/Search_Page/Search_Page.html
+++ b/pages/Search_Page/Search_Page.html
@@ -28,17 +28,18 @@
           class="nav-link-anchor"><span class="nav-link-text">Signature Creations</span></a></div>
       <div class="flex-col justify-start nav-link-wrapper"><a href="../product_pages/Pastry_PAGE.html"
           class="nav-link-anchor"><span class="nav-link-text">Pastry</span></a></div>
-      <a href="../Shopping_Cart_Page/Shopping_Cart_Page.html"><img class="header-icon" src="../../src/logo/cart.png"
-          alt="Shopping Cart" /></a>
-      <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" alt="Account" /></a>
+      <div class=header-icon-container>
+        <a href="../Shopping_Cart_Page/Shopping_Cart_Page.html"><img class="header-icon" src="../../src/logo/cart.png" /></a>
+        <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" /></a>
+      </div>
     </div>
 
     <div class="flex-col banner-container">
       <div class="flex-row justify-between items-center banner-content">
         <span class="banner-text">Order before 2:00pm For Next-Day Home Delivery</span>
-        <div class="flex-row search-container">
-          <a href="../Search_Page/Search_Page.html"><span class="search-text">Search...</span></a>
-          <img class="shrink-0 search-icon" src="../../src/logo/x.png" alt="Clear Search" />
+        <div class="flex-row search-container"><a href="../Search_Page/Search_Page.html">
+            <span class="search-text">Search...</span></a>
+          <img class="shrink-0 search-icon" src="../../src/logo/x.png" />
         </div>
       </div>
     </div>
