--- a/pages/Shopping_Cart_Page/Shopping_Cart_Page.html
+++ b/pages/Shopping_Cart_Page/Shopping_Cart_Page.html
@@ -15,6 +15,7 @@
 
 <body>
   <div class="page">
+  <div class="page">
     <div class="flex-row justify-between items-center header-container">
       <a href="../Homepage/Homepage.html" class="header-logo-link"><span class="header-logo">LeTAO</span></a>
       <div class="flex-col justify-start nav-link-wrapper"><a href="../Homepage/Homepage.html"
@@ -27,9 +28,10 @@
           class="nav-link-anchor"><span class="nav-link-text">Signature Creations</span></a></div>
       <div class="flex-col justify-start nav-link-wrapper"><a href="../product_pages/Pastry_PAGE.html"
           class="nav-link-anchor"><span class="nav-link-text">Pastry</span></a></div>
-      <a href="../Shopping_Cart_Page/Shopping_Cart_Page.html"><img class="header-icon"
-          src="../../src/logo/cart.png" /></a>
-      <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" /></a>
+      <div class=header-icon-container>
+        <a href="../Shopping_Cart_Page/Shopping_Cart_Page.html"><img class="header-icon" src="../../src/logo/cart.png" /></a>
+        <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" /></a>
+      </div>
     </div>
 
     <div class="flex-col banner-container">
@@ -86,13 +88,14 @@
 
     <div class="order-totals-display">
       <span class="final-total-amount">Total $107,97<br /></span>
+      <br />
       <span class="final-total-details">Tax included. Shipping Calculated at Checkout</span>
     </div>
 
     <div class="flex-col cart-summary-sidebar">
       <div class="flex-col self-stretch delivery-options-form">
         <h3 class="self-start delivery-options-title">Local Delivery</h3>
-        <div class="flex-row self-stretch delivery-method-selector">
+        <div class="delivery-method-selector">
           <img class="delivery-method-option" src="../../src/logo/delivery.png" />
           <img class="delivery-method-option" src="../../src/logo/pickup.png" />
         </div>
@@ -124,6 +127,7 @@
 
     <div class="self-stretch order-totals-display">
       <span class="final-total-amount">Total $107,97<br /></span>
+      <br />
       <span class="final-total-details">Tax included. Shipping Calculated at Checkout</span>
       <button class="flex-col checkout-button-wrapper"
         onclick="window.location.href='../Check_out_page/Check_out_page.html'">
