--- a/pages/Homepage/Homepage.html
+++ b/pages/Homepage/Homepage.html
@@ -27,9 +27,10 @@
           class="nav-link-anchor"><span class="nav-link-text">Signature Creations</span></a></div>
       <div class="flex-col justify-start nav-link-wrapper"><a href="../product_pages/Pastry_PAGE.html"
           class="nav-link-anchor"><span class="nav-link-text">Pastry</span></a></div>
-      <a href="../Shopping_Cart_Page/Shopping_Cart_Page.html"><img class="header-icon"
-          src="../../src/logo/cart.png" /></a>
-      <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" /></a>
+      <div class=header-icon-container>
+        <a href="../Shopping_Cart_Page/Shopping_Cart_Page.html"><img class="header-icon" src="../../src/logo/cart.png" /></a>
+        <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" /></a>
+      </div>
     </div>
 
     <div class="flex-col banner-container">
@@ -43,12 +44,15 @@
     </div>
 
     <div class="flex-col main-content">
-      <img class="main_image" src="../../src/imgs/homepage_teaser.png" onclick="window.location.href='../product_pages/All_Product_PAGE.html'"/>
+      <img class="main_image" src="../../src/imgs/homepage_teaser.png"
+        onclick="window.location.href='../product_pages/All_Product_PAGE.html'" />
     </div>
 
     <div class="flex-row equal-division">
-      <img class="main_image equal-division-item" src="../../src/imgs/softserving.png" onclick="window.location.href='../product_pages/All_Product_PAGE.html'" />
-      <img class="main_image equal-division-item ml-63-5" src="../../src/imgs/double.png" onclick="window.location.href='../product_pages/All_Product_PAGE.html'"/>
+      <img class="main_image equal-division-item" src="../../src/imgs/softserving.png"
+        onclick="window.location.href='../product_pages/All_Product_PAGE.html'" />
+      <img class="main_image equal-division-item ml-63-5" src="../../src/imgs/double.png"
+        onclick="window.location.href='../product_pages/All_Product_PAGE.html'" />
     </div>
     <img class="main_image" src="../../src/imgs/tail.png" />
 
