--- a/pages/content_pages/Privacy_Policy.html
+++ b/pages/content_pages/Privacy_Policy.html
@@ -15,6 +15,7 @@
 
 <body>
   <div class="page">
+  <div class="page">
     <div class="flex-row justify-between items-center header-container">
       <a href="../Homepage/Homepage.html" class="header-logo-link"><span class="header-logo">LeTAO</span></a>
       <div class="flex-col justify-start nav-link-wrapper"><a href="../Homepage/Homepage.html"
@@ -27,9 +28,10 @@
           class="nav-link-anchor"><span class="nav-link-text">Signature Creations</span></a></div>
       <div class="flex-col justify-start nav-link-wrapper"><a href="../product_pages/Pastry_PAGE.html"
           class="nav-link-anchor"><span class="nav-link-text">Pastry</span></a></div>
-      <a href="../Shopping_Cart_Page/Shopping_Cart_Page.html"><img class="header-icon"
-          src="../../src/logo/cart.png" /></a>
-      <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" /></a>
+      <div class=header-icon-container>
+        <a href="../Shopping_Cart_Page/Shopping_Cart_Page.html"><img class="header-icon" src="../../src/logo/cart.png" /></a>
+        <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" /></a>
+      </div>
     </div>
 
     <div class="flex-col banner-container">
