--- a/pages/login/Login_Page.html
+++ b/pages/login/Login_Page.html
@@ -16,6 +16,7 @@
 
 <body>
   <div class="page">
+  <div class="page">
     <div class="flex-row justify-between items-center header-container">
       <a href="../Homepage/Homepage.html" class="header-logo-link"><span class="header-logo">LeTAO</span></a>
       <div class="flex-col justify-start nav-link-wrapper"><a href="../Homepage/Homepage.html"
@@ -28,9 +29,10 @@
           class="nav-link-anchor"><span class="nav-link-text">Signature Creations</span></a></div>
       <div class="flex-col justify-start nav-link-wrapper"><a href="../product_pages/Pastry_PAGE.html"
           class="nav-link-anchor"><span class="nav-link-text">Pastry</span></a></div>
-      <a href="../Shopping_Cart_Page/Shopping_Cart_Page.html"><img class="header-icon"
-          src="../../src/logo/cart.png" /></a>
-      <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" /></a>
+      <div class=header-icon-container>
+        <a href="../Shopping_Cart_Page/Shopping_Cart_Page.html"><img class="header-icon" src="../../src/logo/cart.png" /></a>
+        <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" /></a>
+      </div>
     </div>
 
     <div class="flex-col banner-container">
@@ -50,7 +52,7 @@
       <button class="login-button" onclick="window.location.href='../Homepage/Homepage.html'">Login</button>
     </div>
     <img class="store-image"
-      src="https://ide.code.fun/api/image?token=682dbfbfdefdb100111f8d3a&name=166416c27cd18c246740241ec3628dbd.png" />
+      src="../../src/imgs/tail.png" />
       
       <div class="flex-row footer-container">
         <div class="flex-col footer-item">
