--- a/pages/product_pages/Signature_Creations_PAGE.html
+++ b/pages/product_pages/Signature_Creations_PAGE.html
@@ -25,11 +25,12 @@
             class="nav-link-anchor"><span class="nav-link-text">Signature Creations</span></a></div>
         <div class="flex-col justify-start nav-link-wrapper"><a href="../product_pages/Pastry_PAGE.html"
             class="nav-link-anchor"><span class="nav-link-text">Pastry</span></a></div>
-        <a href="../Shopping_Cart_Page/Shopping_Cart_Page.html"><img class="header-icon"
-            src="../../src/logo/cart.png" /></a>
-        <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" /></a>
+        <div class=header-icon-container>
+          <a href="../Shopping_Cart_Page/Shopping_Cart_Page.html"><img class="header-icon" src="../../src/logo/cart.png" /></a>
+          <a href="../login/Login_Page.html"><img class="header-icon" src="../../src/logo/account.png" /></a>
+        </div>
       </div>
-    
+  
       <div class="flex-col banner-container">
         <div class="flex-row justify-between items-center banner-content">
           <span class="banner-text">Order before 2:00pm For Next-Day Home Delivery</span>
@@ -126,7 +127,7 @@
           <div class="product-item">
             <div class="product-card">
               <div class="product-image-container">
-                <img class="product-image" src="../../src/logo/jersey_mild_roll.png" />
+                <img class="product-image" src="../../src/logo/jersey_milk_roll.png" />
               </div>
               <div class="product-info">
                 <div class="product-details">
